# gacha-release-alert

./: .gitignore  AGENTS.md  README.md  config.example.yaml  config.pages.yaml  eslint.config.js  filters.example.yaml  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js  vite.config.test.js
.github/workflows/: pages.yml
docs/: architecture.md
public/: app.js  index.html  styles.css
public/data/: releases.json
src/: App.jsx  App.test.jsx  dashboard.js  dashboard.test.js  styles.css
src/gacha_alert/: __init__.py  cli.py  config.py  korean.py  models.py  notifier.py  sources.py  store.py
tests/: test_config.py  test_export.py  test_gashapon_detail.py  test_korean.py  test_notifier.py  test_sources.py
